# foton-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: basic.rs
examples/cors-demo/: README.md
examples/cors-demo/src/: main.rs
examples/error-handlers/: README.md
examples/error-handlers/src/: main.rs
examples/extensions-demo/: README.md
examples/extensions-demo/src/: main.rs
examples/extractors-demo/: README.md
examples/extractors-demo/src/: main.rs
examples/file-serving/: Cargo.toml
examples/file-serving/src/: main.rs
examples/file-serving/static/: index.html
examples/form-handling/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/middleware-test/src/: main.rs
examples/nested-routing/: Cargo.toml
examples/nested-routing/src/: main.rs
examples/per-route-middleware/: Cargo.toml  README.md
examples/per-route-middleware/src/: main.rs
examples/state-management/: Cargo.toml  README.md
examples/state-management/src/: main.rs
examples/streaming-demo/: Cargo.toml
examples/streaming-demo/src/: main.rs
rust-api-middleware/: Cargo.toml
rust-api-middleware/client/: Cargo.toml
rust-api-middleware/client/examples/: json_fetch.rs  simple_get.rs
rust-api-middleware/client/src/: lib.rs
rust-api-middleware/cors/: Cargo.toml
rust-api-middleware/error-handlers/: Cargo.toml
rust-api-middleware/extractors/: Cargo.toml
rust-api-middleware/helpers/: Cargo.toml
src/: api.rs  config.rs  error.rs  error_handler.rs  extensions.rs  extractors.rs  handler.rs  into_res.rs  lib.rs  middleware.rs  req.rs  res.rs  route.rs  router.rs  stream.rs
src/extractors/: json.rs  mod.rs  path.rs  query.rs  state.rs
src/layers/: mod.rs
