[package]
name = "file-serving"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
rust-api = { path = "../.." }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
bytes = "1"
http-body-util = "0.1"
hyper = "1"
serde_json = "1"
