[package]
name = "rust-api-client"
version = "0.0.1"
edition = "2024"
authors = ["Eric Kweyunga <maverickweyunga@gmail.com>"]
description = "HTTP client for Rust API framework"
license = "MIT"
repository = "https://github.com/erickweyunga/rust-api"
keywords = ["web", "http", "client", "hyper"]

[dependencies]
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["net", "io-util", "time"] }
bytes = "1"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }

[features]
default = ["https"]
json = ["serde", "serde_json"]
https = ["native-tls", "tokio-native-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
