[package]
name = "rust-api-cors"
version = "0.0.1"
edition = "2024"
authors = ["Eric Kweyunga <maverickweyunga@gmail.com>"]
description = "CORS middleware for Rust API"
license = "MIT"
repository = "https://github.com/erickweyunga/rust-api"
keywords = ["web", "cors", "middleware", "http"]
categories = ["web-programming"]
readme = "README.md"

[dependencies]
rust-api = "0.0.2"
async-trait = "0.1"
