[package]
name = "rust-api-error-handlers"
version = "0.0.1"
edition = "2024"
authors = ["Eric Kweyunga <maverickweyunga@gmail.com>"]
description = "Error handlers for Rust API"
license = "MIT"
repository = "https://github.com/erickweyunga/rust-api"
keywords = ["web", "framework", "error", "http"]
categories = ["web-programming"]
readme = "README.md"

[dependencies]
rust-api = "0.0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
