[package]
name = "rust-api-extractors"
version = "0.0.1"
edition = "2024"
authors = ["Eric Kweyunga <maverickweyunga@gmail.com>"]
description = "Type-safe request extractors for Rust API framework"
license = "MIT"
repository = "https://github.com/erickweyunga/rust-api"
keywords = ["web", "framework", "extractors", "http"]

[dependencies]
rust-api = "0.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
bytes = "1"
hyper = "1"
async-trait = "0.1"
